More tests update with new long form options